--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,26 @@
 {
-    "name": "teapot/base/forum-bundle",
+    "name": "teapotio/base-forum-bundle",
     "type": "symfony-bundle",
     "description": "ForumBundle for Symfony2",
     "keywords": ["Forum", "Messages", "Private Messages"],
-    "homepage": "https://github.com/Teapot/BaseForumBundle",
+    "homepage": "https://github.com/teapotio/BaseForumBundle",
     "license": "MIT",
     "authors": [
         {
             "name": "Thomas Potaire",
-            "email": "thomas@idbloc.net"
+            "email": "thomas@teapotio.io"
         }
     ],
     "require": {
         "php": ">=5.3.2",
-        "symfony/framework-bundle": "2.1.*",
-        "symfony/security-bundle": "2.1.*"
+        "symfony/symfony": ">=2.3",
+        "swiftmailer/swiftmailer": "*",
+        "doctrine/doctrine-bundle": "*"
     },
     "require-dev": {
-        "twig/twig": "*",
-        "doctrine/doctrine-bundle": "*",
-        "doctrine/mongodb-odm-bundle": "*",
-        "swiftmailer/swiftmailer": "*",
-        "symfony/yaml": "2.1.*",
-        "symfony/validator": "2.1.*"
     },
     "autoload": {
-        "psr-0": { "Teapot\\Base\\ForumBundle": "" }
+        "psr-0": { "Teapotio\\Base\\ForumBundle": "" }
     },
-    "target-dir": "Teapot/Base/ForumBundle"
+    "target-dir": "Teapotio/Base/ForumBundle"
 }
